[build-system]
requires = ["scikit-build-core>=0.4.0", "nanobind>=2.0.0", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "object_planner_py"
version = "0.3.0"
description = "A header-only, SIMD-accelerated 3-DOF object planner for tabletop pushing"
readme = "README.md"
authors = [{ name = "Hu Tianrun", email = "tianrunhu@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[tool.scikit-build]
cmake.minimum-version = "3.18"
wheel.packages = ["py_src/object_planner_py"]
